--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot run src/server.ts"
+    "dev": "bun --hot run src/server.ts",
+    "start": "bun run src/server.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
