--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,27 @@ events {
 
 http {
     error_log /app/log/nginx_stderr;
+
+    #server {
+    #    listen 443 ssl;
+    #    server_name domain.name.com;
+
+	#    types_hash_max_size 2048;
+    #    include /etc/letsencrypt/options-ssl-nginx.conf;
+    #    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    #    ssl_certificate /etc/letsencrypt/live/domain.name.com/fullchain.pem;
+    #    ssl_certificate_key /etc/letsencrypt/live/domain.name.com/privkey.pem;
+
+    #    location / {
+    #        proxy_pass http://localhost:3000;
+    #        proxy_set_header Upgrade $http_upgrade;
+    #        proxy_set_header Host $host;
+    #        proxy_set_header X-Real-IP $remote_addr;
+    #        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #        proxy_set_header X-Forwarded-Proto $scheme;
+    #    }
+    #}
+
     server {
         listen 80;
         server_name 172.0.0.1;
